--- a/style.css
+++ b/style.css
@@ -23,13 +23,14 @@ h1 {
   border: 1px solid black;
   background-color: #ffccdd;
   width: 30%;
+  height:25px;
   float: right; 
   text-align: center;  
   font-family:Impact, Charcoal, sans-serif;
   font-size:100%; 
 }
 .paragraph{
-  float: bottom;
+  float: left;
   text-align: justify;
 }
 
