--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/********** Base styles **********/
 * {
   box-sizing: border-box;
 }
@@ -12,6 +13,7 @@ h1 {
   border: 1px solid black;
   background-color:#d1d1e0;
   width: 100%;
+  height: 240px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 0px;
