--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
   border: 1px solid black;
   background-color: #ffccdd;
   width: 30%;
-  float: top-right; 
+  float: top; 
   text-align: center;  
   font-family:Impact, Charcoal, sans-serif;
   font-size:100%; 
