--- a/style.css
+++ b/style.css
@@ -17,13 +17,16 @@ h1 {
   margin-left: auto;
   margin-top: 0px;
   margin-bottom: 0px;
+  position: relativa;
 }
 #p1 {
   margin: 0;
   border: 1px solid black;
   background-color: #ffccdd;
   width: 30%;
-  float: right; 
+  position:absolute;
+  right=0;
+  top=0;
   text-align: center;  
   font-family:Impact, Charcoal, sans-serif;
   font-size:100%; 
