--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
   margin-left: auto;
   margin-top: 0px;
   margin-bottom: 0px;
-  position: relativa;
+  position: relative;
 }
 #p1 {
   margin: 0;
