--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ h1 {
   background-color: #ffccdd;
   width: 30%;
   position:absolute;
-  right=0;
-  top=0;
+  right:0;
+  top:0;
   text-align: center;  
   font-family:Impact, Charcoal, sans-serif;
   font-size:100%; 
