--- a/style.css
+++ b/style.css
@@ -13,20 +13,19 @@ h1 {
   border: 1px solid black;
   background-color:#d1d1e0;
   width: 100%;
+  height: 240px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 0px;
   margin-bottom: 0px;
-  position: relative;
 }
 #p1 {
   margin: 0;
   border: 1px solid black;
   background-color: #ffccdd;
   width: 30%;
-  position:absolute;
-  right:0;
-  top:0;
+  height:25px;
+  float: right; 
   text-align: center;  
   font-family:Impact, Charcoal, sans-serif;
   font-size:100%; 
