--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
   border: 1px solid black;
   background-color:#d1d1e0;
   width: 100%;
-  height: 240px;
+  height: auto;
   margin-right: auto;
   margin-left: auto;
   margin-top: 0px;
