--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ h1 {
   margin-left: auto;
   margin-top: 0px;
   margin-bottom: 0px;
+  position: relative;
 }
-#p1 {
+.p1 {
   margin: 0;
   border: 1px solid black;
   background-color: #ffccdd;
@@ -31,6 +32,9 @@ h1 {
   font-size:100%; 
 }
 .paragraph{
+  postion: absolute;
+  left:0px;
+  top:10%;
   float: left;
   text-align: justify;
 }
