--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ h1 {
 }
 .paragraph{
   margin-top: 40px;
-  font-size:5%; 
+  font-family:Arial, Helvetica, sans-serif;
+  font-size:1%; 
   text-align: justify;
 }
 
