--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 {
 .paragraph{
   margin-top: 40px;
   font-family:Arial, Helvetica, sans-serif;
-  font-size:300%; 
+  font-size:10px; 
   text-align: justify;
 }
 
