--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ h1 {
 .p1 {
   margin: 0;
   border: 1px solid black;
-  background-color: #ffccdd;
   width: 30%;
   height:25px;
   float: right; 
@@ -35,7 +34,9 @@ h1 {
   font-size:15px; 
   text-align: justify;
 }
-
+#p1{background-color: #ffccdd;}
+#p2{background-color: #F7E7A0;}
+#p3{background-color: #A0F7D6;}
 /* Simple Responsive Framework. */
 .row {
   width:100%;
